Dockerfile git addition

--- a/edge-mining/Dockerfile
+++ b/edge-mining/Dockerfile
@@ -1,7 +1,7 @@
 ARG BUILD_FROM
 FROM ${BUILD_FROM}
 
-RUN apk add --no-cache curl jq
+RUN apk add --no-cache curl jq git
 
 COPY run.sh /run.sh
 RUN chmod +x /run.sh
